# maptree

./: .gitignore  .travis.yml  README.md  plot_results.py  pyproject.toml  requirements.txt  requirements_m1mac.txt  run_experiment.py  script.slurm  setup.py  setup_data.py
.github/workflows/: ci.yml
data/test/: test_data_medium.txt  test_data_small.txt
experiments/: globals.py
experiments/dataloader/: cp4im.py  synth.py
experiments/experiments/fig1/: constants.py  plotter.py  runner.py
experiments/experiments/fig2/: constants.py  plotter.py  runner.py
experiments/experiments/fig3/: constants.py  plotter.py  runner.py
experiments/searchers/: binary_classification_tree.py  cart.py  dl85.py  gosdt.py  maptree.py  mcmc.py  smc.py
experiments/searchers/tree_smc/: COPYING  README
experiments/searchers/tree_smc/process_data/madelon/: README  download.sh  process_data_feat_challenge.py  process_data_feat_challenge.py.bak
experiments/searchers/tree_smc/process_data/magic04/: README  download.sh  process_data.py  process_data.py.bak
experiments/searchers/tree_smc/process_data/pendigits/: download.sh  process_data.py  process_data.py.bak
experiments/searchers/tree_smc/src/: bdtmcmc.py  bdtmcmc.py.bak  bdtsmc.py  bdtsmc.py.bak  tree_utils.py  tree_utils.py.bak  utils.py  utils.py.bak
maptree/: CMakeLists.txt
maptree/app/: main.cpp
maptree/cmake/: CodeCoverage.cmake  Colors.cmake  Doctest.cmake  Documentation.cmake  LTO.cmake  Warnings.cmake
maptree/include/: constants.h  subproblem.h
maptree/include/cache/: approx_bitset_cache.h  base_cache.h
maptree/include/data/: binary_data_loader.h  bitset.h  data_manager.h  fixed_bitset.h  rnumber.h  split.h
maptree/include/posterior/: tree_likelihood.h  tree_prior.h
maptree/include/search/: base_map_search.h  befs_map_search.h
maptree/include/solution/: decision_tree.h  solution.h
maptree/src/: subproblem.cpp
maptree/src/cache/: approx_bitset_cache.cpp
maptree/src/data/: binary_data_loader.cpp  bitset.cpp  data_manager.cpp  fixed_bitset.cpp  rnumber.cpp
maptree/src/posterior/: tree_likelihood.cpp  tree_prior.cpp
maptree/src/python_bindings/: search_bindings.cpp
maptree/src/search/: base_map_search.cpp  befs_map_search.cpp
maptree/src/solution/: decision_tree.cpp
maptree/tests/: CMakeLists.txt
maptree/tests/bcart/: test_bcart_utils.cpp
maptree/tests/search/: test_search.cpp
maptree/tests/test_data/: test_data_medium.txt
